# MCRCONnogui

./: .gitignore  CMakeLists.txt  MCRCONnogui.cpp  README.md
Plugin/: hi.py
Plugin/QQOF/: Comm.py  Logger.py  PythonPlugin.py  __init__.py
QQOF/: Comm.py  Logger.py  PythonPlugin.py  __init__.py
include/: Definition.h  Initialization.h  MessageHeader.h  Network.h  PythonModule.h
src/: Initialization.cpp  MessageHeader.cpp  Network.cpp  PythonModule.cpp
